force-app/main/default/objects/Grants_Team_Members_History__c/Grants_Team_Members_History__c.object-meta.xml
<CustomObject>
    <label>Grants Team Members History</label>
    <nameField>
        <displayFormat>GTMH-{00000}</displayFormat>
        <label>Grants Team Members History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants Team Members History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>