force-app/main/default/objects/Grants_Team_Members_History__c/fields/Grants_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Grants_Team_Members__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grants Team Members</label>
    <referenceTo>Grants_Team_Members__c</referenceTo>
    <relationshipLabel>Grants Team Members History</relationshipLabel>
    <relationshipName>Grants_Team_Members_History</relationshipName>
    <type>Lookup</type>
</CustomField>